unpackaged/main/default/objects/Merchant_Account_Plan__c/Merchant_Account_Plan__c.object-meta.xml
<CustomObject>
    <label>Merchant Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>