unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp;  Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>