unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Account_Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Owning_Country__c</fullName>
    <formula>TEXT(Account__r.Owning_Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owning Country</label>
    <type>Text</type>
</CustomField>