unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Account_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Name__c</fullName>
    <formula>Account__r.Name &amp; &quot; &quot; &amp; TEXT(YEAR(Created_Date_Value__c+90))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Name</label>
    <type>Text</type>
</CustomField>