unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <formula>TEXT(Account__r.Account_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>