unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_1st_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Actions_1st_Quarter__c</fullName>
    <label>Actions 1st Quarter</label>
    <summarizedField>Actions_1st_Quarter__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Actions_1st_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>