unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_1st_Quarter_Health__c.field-meta.xml
<CustomField>
    <fullName>Actions_1st_Quarter_Health__c</fullName>
    <label>Actions 1st Quarter Health</label>
    <summarizedField>Actions_1st_Quarter__c.Health_Score__c</summarizedField>
    <summaryForeignKey>Actions_1st_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>