unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_1st_Quarter_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Actions_1st_Quarter_Recorded__c</fullName>
    <label>Actions 1st Quarter Recorded</label>
    <summaryForeignKey>Actions_1st_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>