unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_2nd_Quarter_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Actions_2nd_Quarter_Recorded__c</fullName>
    <label>Actions 2nd Quarter Recorded</label>
    <summaryForeignKey>Action_2nd_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>