unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_3rd_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Actions_3rd_Quarter__c</fullName>
    <label>Actions 3rd Quarter</label>
    <summarizedField>Action_3rd_Quarter__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Action_3rd_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>