unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_3rd_Quarter_Health__c.field-meta.xml
<CustomField>
    <fullName>Actions_3rd_Quarter_Health__c</fullName>
    <label>Actions 3rd Quarter Health</label>
    <summarizedField>Action_3rd_Quarter__c.Health_Score__c</summarizedField>
    <summaryForeignKey>Action_3rd_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>