unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_3rd_Quarter_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Actions_3rd_Quarter_Recorded__c</fullName>
    <label>Actions 3rd Quarter Recorded</label>
    <summaryForeignKey>Action_3rd_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>