unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_4th_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Actions_4th_Quarter__c</fullName>
    <label>Actions 4th Quarter</label>
    <summarizedField>Action_4th_Quarter__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Action_4th_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>