unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Actions_4th_Quarter_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Actions_4th_Quarter_Recorded__c</fullName>
    <label>Actions 4th Quarter Recorded</label>
    <summaryForeignKey>Action_4th_Quarter__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>