unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Auto_Print__c.field-meta.xml
<CustomField>
    <fullName>Auto_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Print</label>
    <type>Checkbox</type>
</CustomField>