unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Commercial_Terms__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Terms__c</fullName>
    <label>Commercial Terms</label>
    <type>TextArea</type>
</CustomField>