unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Created_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Value__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Value</label>
    <type>Date</type>
</CustomField>