unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Month__c</fullName>
    <formula>MONTH(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>