unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Current_Year_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Plan__c</fullName>
    <formula>IF(CONTAINS(Name, TEXT(This_Year__c)), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Plan</label>
    <type>Text</type>
</CustomField>