unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/DCC_Pricing__c.field-meta.xml
<CustomField>
    <fullName>DCC_Pricing__c</fullName>
    <label>DCC Pricing</label>
    <type>TextArea</type>
</CustomField>