unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <defaultValue>&quot;Relationship:_BR_ENCODED__BR_ENCODED_Strategic:_BR_ENCODED__BR_ENCODED_Operational:&quot;</defaultValue>
    <label>Executive Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>