unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Front_End_Solution__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Solution__c</fullName>
    <label>Front End Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eTF</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PA 3rd Party</fullName>
            </value>
            <value>
                <fullName>PA Offline</fullName>
            </value>
            <value>
                <fullName>PAOL</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>POL</fullName>
            </value>
            <value>
                <fullName>POL Pro</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>