unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Invoicing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Frequency__c</fullName>
    <label>Invoicing Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>