unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Last_Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Last_Contract_Renewal__c</fullName>
    <label>Last Contract Renewal</label>
    <type>Date</type>
</CustomField>