unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Merchant_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Merchant Account Plans (Merchant Account Plan)</relationshipLabel>
    <relationshipName>Merchant_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>