unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Minimum_Completed__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Completed__c</fullName>
    <formula>IF(AND(Actions_3rd_Quarter_Recorded__c &gt; 0,  Actions_4th_Quarter_Recorded__c &gt; 0, Objectives_Recorded__c &gt; 2, SWOTS_Recorded__c &gt; 2), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Completed?</label>
    <type>Text</type>
</CustomField>