unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <label>Objectives</label>
    <summarizedField>Account_Objective__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Account_Objective__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>