unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Objectives_Health__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Health__c</fullName>
    <label>Objectives Health</label>
    <summarizedField>Account_Objective__c.Health_Score__c</summarizedField>
    <summaryForeignKey>Account_Objective__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>