unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Objectives_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Recorded__c</fullName>
    <label>Objectives Recorded</label>
    <summaryForeignKey>Account_Objective__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>