unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Parent_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Merchant Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>