unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Parent_Account_Plan_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Plan_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account Plan Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchant_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>