unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Parent_Account_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Plan_Text__c</fullName>
    <label>Parent Account Plan Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>