unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focus Points Created</fullName>
                <default>true</default>
                <label>Focus Points Created</label>
            </value>
            <value>
                <fullName>Create SWOTS, Objectives and Actions</fullName>
            </value>
            <value>
                <fullName>Create Objectives and Actions</fullName>
            </value>
            <value>
                <fullName>Add Contacts</fullName>
            </value>
            <value>
                <fullName>Add Related Opportunities</fullName>
            </value>
            <value>
                <fullName>Executive Summary</fullName>
            </value>
            <value>
                <fullName>Submit Plan for Approval</fullName>
            </value>
            <value>
                <fullName>Approval Submitted</fullName>
            </value>
            <value>
                <fullName>Plan Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>