unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/SWOTS_Recorded__c.field-meta.xml
<CustomField>
    <fullName>SWOTS_Recorded__c</fullName>
    <label>SWOTS Recorded</label>
    <summaryForeignKey>SWOT__c.Merchant_Account_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>