unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Tax_Free_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Pricing__c</fullName>
    <label>Tax Free Pricing</label>
    <type>TextArea</type>
</CustomField>