unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <formula>YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>