unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Total_Health__c.field-meta.xml
<CustomField>
    <fullName>Total_Health__c</fullName>
    <formula>Actions_1st_Quarter_Health__c +  Actions_2nd_Quarter_Health__c +  Actions_3rd_Quarter_Health__c  +  Actions_4th_Quarter_Health__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Health</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>