unpackaged/main/default/objects/Merchant_Account_Plan__c/fields/Total_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Health_Score__c</fullName>
    <formula>IF(AND(Created_Month__c &lt; 6, Total_Health__c &gt;= 32), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,25, 25), 
IF(AND(Created_Month__c &lt; 6, Total_Health__c &lt; 32, Total_Health__c &gt;= 8), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,25, 25), 
IF(AND(Created_Month__c &lt; 6, Total_Health__c &lt; 8), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,25, 25),
IF(AND(Created_Month__c &gt;= 6, Total_Health__c &gt;= 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,25, 25), 
IF(AND(Created_Month__c &gt;= 6, Total_Health__c &lt; 16, Total_Health__c &gt;= 4), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,25, 25), 
IF(AND(Created_Month__c &lt;= 6, Total_Health__c &lt; 4), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,25, 25),&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Health Score</label>
    <type>Text</type>
</CustomField>