unpackaged/main/default/objects/Merchant_Account_Plan__c/recordTypes/Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Account_Plan</fullName>
    <active>true</active>
    <label>Account Plan</label>
</RecordType>