unpackaged/main/default/objects/Merchant_Account_Plan__c/recordTypes/Account_Plan_IKA_NKA.recordType-meta.xml
<RecordType>
    <fullName>Account_Plan_IKA_NKA</fullName>
    <active>true</active>
    <description>Use for IKA or NKA Head Office Only (for In-Fill use Child Account Plan)</description>
    <label>Account Plan IKA/NKA</label>
</RecordType>