unpackaged/main/default/objects/Merchant_Account_Plan__c/recordTypes/Account_Plan_New.recordType-meta.xml
<RecordType>
    <fullName>Account_Plan_New</fullName>
    <active>true</active>
    <label>Account Plan New</label>
</RecordType>