unpackaged/main/default/objects/Merchant_Account_Plan__c/recordTypes/Child_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Child_Account_Plan</fullName>
    <active>true</active>
    <description>For use with IKA/NKA In-fill Account Plans</description>
    <label>Child Account Plan</label>
</RecordType>