unpackaged/main/default/objects/Merchant_Account_Plan__c/recordTypes/Partner_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Partner_Account_Plan</fullName>
    <active>true</active>
    <label>Partner Account Plan</label>
</RecordType>