unpackaged/main/default/objects/Merchant_Account_Plan__c/validationRules/SiS_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>SiS_Update</fullName>
    <active>false</active>
    <errorConditionFormula>AND(YEAR(SiS_L12M_Update__c)&lt;&gt; 2020, SiS_L12M__c &lt; 1)</errorConditionFormula>
    <errorMessage>You must complete or update the TF SiS L12M field on the account record.</errorMessage>
</ValidationRule>