unpackaged/main/default/objects/Merchant_Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Account_Plan__c</columns>
    <columns>Total_Health__c</columns>
    <columns>Total_Health_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>