unpackaged/main/default/objects/Merchant_Account_Plan__c/listViews/All_Account_Plans_2020.listView-meta.xml
<ListView>
    <fullName>All_Account_Plans_2020</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Account_Plan__c</columns>
    <columns>Total_Health__c</columns>
    <columns>Total_Health_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Merchant_Account_Plan__c.Account_Plan,Merchant_Account_Plan__c.Account_Plan_IKA_NKA,Merchant_Account_Plan__c.Account_Plan_New,Merchant_Account_Plan__c.Child_Account_Plan</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <label>All Account Plans 2020</label>
</ListView>