unpackaged/main/default/objects/Merchant_Account_Plan__c/listViews/My_Unapproved_Merchant_Account_Plans.listView-meta.xml
<ListView>
    <fullName>My_Unapproved_Merchant_Account_Plans</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Account_Plan__c</columns>
    <columns>Total_Health__c</columns>
    <columns>Total_Health_Score__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Merchant_Account_Plan__c.Account_Plan</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Not Approved,Rejected</value>
    </filters>
    <label>My Unapproved Merchant Account Plans</label>
</ListView>